[project]
name = "recipetree"
version = "0.1"
authors = [
  { name="geraldiors", email="geraldio.rs@gmail.com" },
]
description = "A package for automatic tree delineation and forest analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/geraldioeres/recipetree"
Issues = "https://github.com/geraldioeres/recipetree/issues"